adding claude options

--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Cookie Spots - Find the best cookie spots in your area" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- Add Inter font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>Cookie Spots</title>
   </head>
   <body>
